--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pwdb",
-  "version": "1.8.0",
+  "name": "@chippewa-software-technology/pwdb",
+  "version": "2.0.0",
   "author": {
     "name": "Brian Carter",
     "email": "briancarter@chipsofttech.com"
