--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
   },
   "devDependencies": {
     "chai": "^3.2.0",
-    "mocha": "1.4.x",
-    "request": "2.9.x",
-    "sinon": "1.3.x",
+    "commander": "1.1.1",
     "exec-time": "0.0.2",
-    "commander": "1.1.1"
+    "mocha": "^1.4.x",
+    "request": "^2.88.0",
+    "sinon": "1.3.x"
   },
   "scripts": {
     "test": "./node_modules/.bin/mocha --reporter spec --timeout 10000"
