--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "chai": "^3.2.0",
     "commander": "1.1.1",
     "exec-time": "0.0.2",
-    "mocha": "^1.4.x",
+    "mocha": "^5.2.0",
     "request": "^2.88.0",
     "sinon": "1.3.x"
   },
