--- a/browser-version/package.json
+++ b/browser-version/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
     "async": "~0.2.9",
+    "browserify": "^16.2.2",
     "fs-extra": "~0.6.3",
-    "uglify-js": "^2.3.6",
+    "uglify-js": "^2.8.29" 
     "browserify": "^2.25.0"
   }
 }
