--- a/browser-version/package.json
+++ b/browser-version/package.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
     "async": "~0.2.9",
-    "browserify": "^16.2.2",
     "fs-extra": "~0.6.3",
-    "uglify-js": "^3.4.8"
+    "uglify-js": "~2.3.6",
+    "browserify": "~2.25.0"
   }
 }
